mirror site hosting

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Lobster|PT+Serif|Rubik&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Onion Station</title>
 </head>
 <body>
     <header class="x-header">
