disabled:github link

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </div>
                 <div class="hd-right">
                     <ul class="hd-nav">
-                        <li><a href="https://github.com/Coordinate-Cat/onion-hosting-1222" class="hd-github">Github</a></li>
+                        <!-- <li><a href="https://github.com/Coordinate-Cat/onion-hosting-1222" class="hd-github">Github</a></li> -->
                         <li><a href="https://twitter.com/ito_okash1" class="hd-twitter">Twitter</a></li>
                     </ul>
                 </div>
